--- a/public/index.html
+++ b/public/index.html
@@ -11,15 +11,25 @@
     <script src="lib/angular/angular.min.js"></script>
     <script src="lib/angular-ui-router/release/angular-ui-router.min.js"></script>
 
-    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
+<!--    <link rel="stylesheet" href="https://unpkg.com/leaflet@1.1.0/dist/leaflet.css"
           integrity="sha512-wcw6ts8Anuw10Mzh9Ytw4pylW8+NAD4ch3lqm9lzAsTxg0GFeJgoAtxuCLREZSC5lUXdVyo/7yfsqFjQ4S+aKw=="
-          crossorigin=""/>
+          crossorigin=""/>-->
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.css" />
 
     <!-- Make sure you put this AFTER Leaflet's CSS -->
-    <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"
+<!--    <script src="https://unpkg.com/leaflet@1.1.0/dist/leaflet.js"
             integrity="sha512-mNqn2Wg7tSToJhvHcqfzLMU6J4mkOImSPTxVZAdo+lcPlk+GhZmYgACEe0x35K7YzW1zJ7XyJV/TT1MrdXvMcA=="
             crossorigin="">
-    </script>
+    </script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/leaflet/0.7.7/leaflet.js"></script>
+    <!--wicket-->
+    <script src="lib/leaflet-providers/leaflet-providers.js"></script>
+    <script src="lib/wicket/wicket.js"></script>
+    <script src="lib/wicket/wicket-leaflet.js"></script>
+    <!--terrafromer-->
+    <script src="lib/terraformer/terraformer.min.js"></script>
+    <script src="lib/terraformer-wkt-parser/terraformer-wkt-parser.min.js"></script>
 
     <script type="text/javascript">
         angular.module('donApp', ['ui.router'])
@@ -64,6 +74,19 @@
                         templateUrl: '/views/moscowMap.html',
                         controller: 'moscowMapCtrl'
                     })
+                    .state('wickedDemo', {
+                        url: '/wickedDemo',
+                        templateUrl: '/views/wickedDemo.html',
+                        controller: 'wickedDemoCtrl',
+                        controllerAs: 'ctrl'
+                    })
+                    .state('wickedDemo2', {
+                        url: '/wickedDemo2',
+                        templateUrl: '/views/wickedDemo2.html',
+                        controller: 'wicketDemo2Ctrl',
+                        controllerAs: 'ctrl'
+                    })
+
 
 
             })
@@ -73,6 +96,8 @@
     <script src="javascripts/controllers/quickStartGuideCtrl.js"></script>
     <script src="javascripts/controllers/markersCustomIconsCtrl.js"></script>
     <script src="javascripts/controllers/moscowMapCtrl.js"></script>
+    <script src="javascripts/controllers/wickedDemoCtrl.js"></script>
+    <script src="javascripts/controllers/wickedDemo2Ctrl.js"></script>
 
 
 
